# starwars-graphql

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml
database/: connection.py  database.env  models.py
